Basic design finished.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
+
+<div class="title">
   {{title}}
-</h1>
+</div>
+
+
+<div class="main-container">
+  <terminal></terminal>
+</div>
+
+<div class="los-angeles">
+  <img [src]="'assets/img/los-angeles.png'" width="500px" />
+</div>
+<div class="footer"></div>
