--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-
+<div class="header">
+  </div>
 <div class="title">
   {{title}}
 </div>
@@ -11,4 +12,6 @@
 <div class="los-angeles">
   <img [src]="'assets/img/los-angeles.png'" width="500px" />
 </div>
-<div class="footer"></div>
+<div class="footer">
+  Made by Jeremy Aftem.
+</div>
