--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
 <div class="header">
+  <div class="title">
+    {{title}}
   </div>
-<div class="title">
-  {{title}}
+
+  <div class="right-title">
+    <ul class="menu">
+      <li><a href="http://www.jaftem.com/blog">Blog</a></li>
+      <li><a href="http://www.jaftem.com/">Home</a></li>
+    </ul>
+  </div>
 </div>
 
 
@@ -10,8 +17,10 @@
 </div>
 
 <div class="los-angeles">
-  <img [src]="'assets/img/los-angeles.png'" width="500px" />
+  <img [src]="'assets/img/los-angeles.png'" width="500px"
+        class="la-img" />
 </div>
 <div class="footer">
   Made by Jeremy Aftem.
+
 </div>
