--- a/src/app/components/terminal/line/line.component.html
+++ b/src/app/components/terminal/line/line.component.html
@@ -1,7 +1,7 @@
 <div class="line-container">
-    <div class="center">
-            <div class="username">{{ user }}</div>
-            <div class="line-str" [innerHTML]="str"></div>
-
+    <div class="linenum">{{ ln + 1 }}</div>
+    <div class="container-right">
+	    <div class="username">{{ user }}</div>
+	    <div class="line-str" [innerHTML]="str"></div>
     </div>
 </div>
