--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,18 +9,52 @@
 .main-container {
      margin: auto;
      position: absolute;
-     top: 0; left: 0; bottom: 0; right: 0;
+     top: 21.5vh; left: 0; bottom: 0; right: 0;
 }
 
+.menu {
+    list-style-type: none;
+    font-family: 'Source Code Pro';
+    font-size: 13px;
+    color: #141E30;
+    float: right;
+    margin-top: 0;
+    padding-top: 0;
+}
+
+li {
+    float: right;
+    text-transform: uppercase;
+    margin-left:40px;
+    padding-bottom: 2px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: #EEE;
+}
+ul li a:hover, ul li a:focus {
+ color: #FFF;
+ background-color: #141E30;
+}
+a {
+    color: #141E30;
+    text-decoration: none;
+}
 .title {
     font-family: 'Roboto', sans-serif;
-    font-size: 55px;
-    padding-top: 10vh;
-    width: 100vh;
-    text-align: center;
+    font-size: 18px;
+    text-align: left;
     margin: 0 auto;
     font-weight: 700;
     color: #141E30;
+    display: inline;
+}
+
+.right-title {
+    font-size: 13px;
+    text-align: right;
+    align-self: right;
+    color: #141E30;
+    float: right;
 }
 
 .footer {
@@ -36,18 +70,27 @@
 }
 
 .header {
-    width: 100%;
-    position: absolute;
-    top: 0;
+    max-width: -webkit-calc(800px - (30px * 2));
+    max-width: calc(800px - (30px * 2));
+    padding-top: 4vh;
+    margin: 0 auto;
     height: 0px;
-    background-color: #E5E7EA;
+    background-color: #FFF;
 }
 
 .los-angeles {
-    width: 800px;
-    margin: auto;
+    resize: both;
+    max-width: 500px;
+    height: auto; 
+    margin: 0 auto;
     position: absolute;
     text-align: center;
-    left: 0; right: 0;
+    left: 0;
+    right: 0;
     bottom: 45px;
+}
+
+.la-img {
+    width: 100%;
+    height: auto;
 }
