--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
   </div>
 </div>
 
+<div class="welcome-msg">I am an engineer, designer, and creator.<br />Let's get to know one another.</div>
 
 <div class="main-container">
   <terminal></terminal>
