--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,25 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-@import url('https://fonts.googleapis.com/css?family=Roboto:700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700,300');
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:700');
+
 
 
 .main-container {
      margin: auto;
      position: absolute;
-     top: 21.5vh; left: 0; bottom: 0; right: 0;
+     top: 34.5vh; left: 0; bottom: 0; right: 0;
+}
+
+.welcome-msg {
+    font-family: Roboto;
+    font-weight: 300;
+    font-size: 23px;
+    line-height: 40px;
+    position: absolute;
+    text-align: center;
+    top: 17.5vh; left: 0; bottom: 0; right: 0;
 }
 
 .menu {
@@ -41,7 +51,7 @@ a {
 }
 .title {
     font-family: 'Roboto', sans-serif;
-    font-size: 18px;
+    font-size: 15px;
     text-align: left;
     margin: 0 auto;
     font-weight: 700;
@@ -61,11 +71,11 @@ a {
     width: 100%;
     position: absolute;
     bottom: 0;
-    height: 50px;
+    height: 30px;
     background-color: #E5E7EA;
     font-family: 'Open Sans';
     text-align: center;
-    line-height: 50px;
+    line-height: 30px;
     font-size: 12px;
 }
 
@@ -80,14 +90,14 @@ a {
 
 .los-angeles {
     resize: both;
-    max-width: 500px;
+    max-width: 300px;
     height: auto; 
     margin: 0 auto;
     position: absolute;
     text-align: center;
     left: 0;
     right: 0;
-    bottom: 45px;
+    bottom: 25px;
 }
 
 .la-img {
