--- a/src/app/components/terminal/prompt/prompt.component.css
+++ b/src/app/components/terminal/prompt/prompt.component.css
@@ -2,7 +2,7 @@
     font-weight: 700;
     font-family: 'Source Code Pro';
     margin-right: 11px;
-    padding-left: 3px;
+    padding-left: 0px;
     /*border-left: 1px solid #CCC;*/
 }
 
@@ -32,10 +32,11 @@
 
 .linenum {
     text-align: right;
-    padding-right: 8px;
+    margin-right: 15px;
+    padding-right: 12px;
     background: #d4d5d6;
     color: #a5a5a5;
     padding-left: 4px;
     display: inline;
-    width: 18px;
+    width: 20px;
 }
